# NekRSW

./: .gitignore  CMakeLists.txt  README-Windows.md  README.md
cmake/: bench.cmake  gslib.cmake  hypre.cmake  nek5000.cmake  nekrs.cmake  utils.cmake
examples/channel/: channel.par.log.2
src/app/nrs/bdry/: bdry.cpp
src/app/nrs/plugins/kernels/: lowMach.okl
src/core/advsub/: benchmark.cpp
src/core/elliptic/: SEMFEMSolverBuild.cpp
src/core/elliptic/MG/: MGSolver.cpp
src/core/elliptic/axHelm/: benchmark.cpp
src/core/iofld/: iofld.hpp
src/core/mesh/: meshBasis1D.cpp
src/core/nekInterface/: nekInterface.f  nekInterfaceAdapter.cpp
src/core/pointInterpolation/findpts/: findpts.cpp
src/core/udf/: CMakeLists.txt  compileUDFKernels.cpp  udf.cpp  udfMake.hpp
src/lib/: nekrs.cpp
src/platform/: comm.cpp  device.cpp  deviceMemory.hpp  fileBcast.cpp  fileUtils.cpp  kernelManager.cpp  nekrsSys.hpp.in  platform.cpp  setEnvVars.hpp
src/platform/ogs/: ogsGatherMany.cpp  ogsGatherScatterMany.cpp  ogsScatterMany.cpp  oogs.cpp
src/platform/utils/: sha1.cpp  tinyexpr.c
src/solver/fluid/: fluidSolver.cpp
src/solver/geom/: geomSolver.cpp
src/solver/scalar/: scalarSolver.cpp
tools/: NekRSMonitorWindow.ps1
windows/: build-msmpi.ps1  build-nek-interface.ps1  nekrs-env.cmd  occa_smoke.okl
windows/compat/: dlfcn.h  err.h  getopt.h  libgen.h  nekrs_windows_compat.h  unistd.h
windows/compat/sys/: resource.h
